--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
+    "@prisma/client": "^3.8.1",
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -21,6 +25,7 @@
     "postcss": "^8.4.5",
     "prisma": "^3.8.1",
     "tailwindcss": "^3.0.18",
+    "ts-node": "^10.4.0",
     "typescript": "4.5.5"
   }
 }
