--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   },
   "dependencies": {
     "@prisma/client": "^3.8.1",
+    "apollo-server-micro": "^3.6.2",
+    "graphql": "^16.3.0",
+    "micro": "^9.3.4",
+    "micro-cors": "^0.1.1",
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/micro-cors": "^0.1.2",
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.2",
