--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "dependencies": {
     "@prisma/client": "^3.8.1",
     "apollo-server-micro": "^3.6.2",
-    "graphql": "^16.3.0",
+    "graphql": "^14.6.0",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
     "next": "12.0.9",
+    "nexus": "^1.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
